// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockUI block and unblock fullscreen events: blocked-event-fullscreen 1`] = `
<body
  class="p-overflow-hidden"
  style="--scrollbar-width: 1024px;"
>
  <div>
    <div
      aria-busy="false"
      class="p-blockui-container"
      data-pc-name="blockui"
      data-pc-section="root"
    />
  </div>
  <div
    class="p-blockui p-component-overlay p-component-overlay-enter p-blockui-document"
    data-pc-section="mask"
    style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 3203;"
  />
</body>
`;

exports[`BlockUI block and unblock fullscreen events: unblocked-event-fullscreen 1`] = `
<body
  class=""
  style=""
>
  <div>
    <div
      aria-busy="false"
      class="p-blockui-container"
      data-pc-name="blockui"
      data-pc-section="root"
    />
  </div>
</body>
`;

exports[`BlockUI block and unblock panel events: blocked-event 1`] = `
<div>
  <div
    aria-busy="false"
    class="p-blockui-container"
    data-pc-name="blockui"
    data-pc-section="root"
  >
    <div
      class="p-panel p-component"
      data-pc-name="panel"
      data-pc-section="root"
      id="pr_id_3"
    >
      <div
        aria-hidden="false"
        aria-labelledby="pr_id_3_header"
        class="p-toggleable-content"
        data-pc-section="toggleablecontent"
        id="pr_id_3_content"
        role="region"
      >
        <div
          class="p-panel-content"
          data-pc-section="content"
        >
          unblocked
        </div>
      </div>
    </div>
    <div
      class="p-blockui p-component-overlay p-component-overlay-enter"
      data-pc-section="mask"
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 2103;"
    />
  </div>
</div>
`;

exports[`BlockUI block and unblock panel events: unblocked-event 1`] = `
<div>
  <div
    aria-busy="false"
    class="p-blockui-container"
    data-pc-name="blockui"
    data-pc-section="root"
  >
    <div
      class="p-panel p-component"
      data-pc-name="panel"
      data-pc-section="root"
      id="pr_id_3"
    >
      <div
        aria-hidden="false"
        aria-labelledby="pr_id_3_header"
        class="p-toggleable-content"
        data-pc-section="toggleablecontent"
        id="pr_id_3_content"
        role="region"
      >
        <div
          class="p-panel-content"
          data-pc-section="content"
        >
          unblocked
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BlockUI block fullscreen 1`] = `
<body
  class="p-overflow-hidden"
  style="--scrollbar-width: 1024px;"
>
  <div>
    <div
      aria-busy="true"
      class="p-blockui-container"
      data-pc-name="blockui"
      data-pc-section="root"
    />
  </div>
  <div
    class="p-blockui p-component-overlay p-component-overlay-enter p-blockui-document"
    data-pc-section="mask"
    style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 1101;"
  />
</body>
`;

exports[`BlockUI block panel 1`] = `
<body
  class=""
  style=""
>
  <div>
    <div
      aria-busy="true"
      class="p-blockui-container"
      data-pc-name="blockui"
      data-pc-section="root"
    >
      <div
        class="p-panel p-component"
        data-pc-name="panel"
        data-pc-section="root"
        id="pr_id_1"
      >
        <div
          aria-hidden="false"
          aria-labelledby="pr_id_1_header"
          class="p-toggleable-content"
          data-pc-section="toggleablecontent"
          id="pr_id_1_content"
          role="region"
        >
          <div
            class="p-panel-content"
            data-pc-section="content"
          >
            blocked
          </div>
        </div>
      </div>
      <div
        class="p-blockui p-component-overlay p-component-overlay-enter"
        data-pc-section="mask"
        style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 2102;"
      />
    </div>
  </div>
</body>
`;

exports[`BlockUI container style and className 1`] = `
<body
  class=""
  style=""
>
  <div>
    <div
      aria-busy="true"
      class="p-blockui-container container-jest"
      data-pc-name="blockui"
      data-pc-section="root"
      style="cursor: pointer;"
    >
      <div
        class="p-panel p-component"
        data-pc-name="panel"
        data-pc-section="root"
        id="pr_id_4"
      >
        <div
          aria-hidden="false"
          aria-labelledby="pr_id_4_header"
          class="p-toggleable-content"
          data-pc-section="toggleablecontent"
          id="pr_id_4_content"
          role="region"
        >
          <div
            class="p-panel-content"
            data-pc-section="content"
          >
            style + class
          </div>
        </div>
      </div>
      <div
        class="block-jest p-blockui p-component-overlay p-component-overlay-enter"
        data-pc-section="mask"
        style="cursor: move; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 2103;"
      />
    </div>
  </div>
</body>
`;

exports[`BlockUI unblock panel 1`] = `
<body
  class=""
  style=""
>
  <div>
    <div
      aria-busy="false"
      class="p-blockui-container"
      data-pc-name="blockui"
      data-pc-section="root"
    >
      <div
        class="p-panel p-component"
        data-pc-name="panel"
        data-pc-section="root"
        id="pr_id_2"
      >
        <div
          aria-hidden="false"
          aria-labelledby="pr_id_2_header"
          class="p-toggleable-content"
          data-pc-section="toggleablecontent"
          id="pr_id_2_content"
          role="region"
        >
          <div
            class="p-panel-content"
            data-pc-section="content"
          >
            unblocked
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
